--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "angularfire": "~0.8.2"
+    "angularfire": "~0.8.2",
+    "angular-spotify": "~0.6.0",
+    "angular-post-message": "~1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
