--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-route": "~1.2.0",
     "angularfire": "~0.8.2",
     "angular-spotify": "~0.6.0",
-    "angular-post-message": "~1.1.1"
+    "angular-post-message": "~1.1.1",
+    "ng-deezer-sdk": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
