--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angularfire": "~0.8.2",
     "angular-spotify": "~0.6.0",
     "angular-post-message": "~1.1.1",
-    "ng-deezer-sdk": "*"
+    "ng-deezer-sdk": "*",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
